# kairos

./: .gitignore  README.md  abcd_protocal.ino  main.py  test.txt.txt
1st_Kairos_project_last/: README.md
1st_Kairos_project_last/Flask_server/: app.py  data.csv
1st_Kairos_project_last/PLC/: ASCII_Slave_last.xgwx
1st_Kairos_project_last/ROS/oioi/: CMakeLists.txt  README.md  package.xml
1st_Kairos_project_last/ROS/oioi/launch/: lidar_active.launch  myagv_active_all.launch  mycobot_320_gripper_moveit.launch
1st_Kairos_project_last/ROS/oioi/scripts/: color_detector.py  modbus_frame.py  my_lidar.py  position_print.py  sub_navi_coor.py  sync_plan.py  test_0610.py  test_0611.py  test_0612.py  test_0612_1.py  test_0612_2.py
1st_Kairos_project_last/ROS/oioi/urdf/myagv/: agv_b.STL  myAGV.urdf  myagv_up.dae
1st_Kairos_project_last/deeplearning/: deeplearningcode.ipynb
4clock_robot_control/: jdArm200_ik.py  util.py
ARUDIUNO/: Serial_python.py  led_web.py  roobot_arm_control.py  signal_sensor.py
ARUDIUNO/abcd_protocal/: abcdprotocal.py
ARUDIUNO/double_for_statement/: double_for_statement.c++
ARUDIUNO/line_tracer/: line_tracker.ino
ARUDIUNO/sketch_jul17a/: sketch_jul17a.ino
Arduino/python_serial_receive/: line_c.c++  python_serial_receive.ino
Arduino/software_serial_python/: software_serial_python.ino
PLC/1_2INV_단자대운전_정역정지인터록제어_직접제어(dr14e)/: 1_2INV_단자대운전_정역정지인터록제어_직접제어.state  1_2INV_단자대운전_정역정지인터록제어_직접제어.xgwx  1_2INV_단자대운전_정역정지인터록제어_직접제어.xgwx_bkx0  1_2INV_단자대운전_정역정지인터록제어_직접제어.xgwx_bkx1  1_2INV_단자대운전_정역정지인터록제어_직접제어.xgwx_bkx2
PLC/485modbusRTU통신제어_hmi/: 485modbusRTU통신제어_hmi.state  485modbusRTU통신제어_hmi.xgwx  485modbusRTU통신제어_hmi.xgwx_bkx0  485modbusRTU통신제어_hmi.xgwx_bkx1  485modbusRTU통신제어_hmi.xgwx_bkx2
PLC/8_20_mini_project/: 8_20_mini_project.state  8_20_mini_project.xgwx
PLC/8_21/: 8_21.state  8_21.xgwx  8_21.xgwx_bkx0  8_21.xgwx_bkx1  8_21.xgwx_bkx2
PLC/8_22/: 8_22.state  8_22.xgwx  8_22.xgwx_bkx0  8_22.xgwx_bkx1  8_22.xgwx_bkx2
PLC/8_22_1/: 8_22_1.state  8_22_1.xgwx  8_22_1.xgwx_bkx0  8_22_1.xgwx_bkx1  8_22_1.xgwx_bkx2
PLC/8_22_2/: 8_22_2.state  (+4 more)
QPT_final_project/: ar_marker.py
ROS2/mycobot320_moveit_package/mycobot_description/: package.xml  setup.cfg  setup.py
ROS2/mycobot320_moveit_package/mycobot_description/config/: rviz_cam_gripper_set.rviz  rviz_set.rviz
ROS2/mycobot320_moveit_package/mycobot_description/launch/: display_launch.py  gazebo_launch.py  robot_state_publisher.launch.py  test_1_launch.py
ROS2/mycobot320_moveit_package/mycobot_description/mycobot_description/: js_pub_test.py
ROS2/mycobot320_moveit_package/mycobot_description/rviz/: rviz_set.rviz
ROS2/mycobot320_moveit_package/mycobot_description/urdf/: mycobot_320_cam_gripper.urdf  mycobot_320_gripper.urdf
ROS2/ros2_exercise/src/cv_msg/: CMakeLists.txt  package.xml
ROS2/ros2_exercise/src/cv_msg/srv/: SrvArduino.srv  SrvGood.srv  SrvPonit.srv
ROS2/slam_ws/src/ps2_controller/: CMakeLists.txt  package.xml
ROS2/slam_ws/src/ps2_controller/include/ps2_controller/: ps2_controller.h  ps2_controller_node.hpp
ROS2/slam_ws/src/ps2_controller/src/: ps2_controller.cpp
arduino/: DHT_Unified_Sensor.c++  Motor.cpp  Serialcode(full-duplex).cpp  dc_motor.c++  heart.c++  soft.cpp
box_data/: photo_1.txt  photo_10.txt  photo_100.txt  photo_101.txt  photo_102.txt  photo_103.txt  photo_104.txt  photo_105.txt  photo_106.txt  photo_107.txt  photo_108.txt  photo_109.txt  photo_11.txt  photo_110.txt  photo_111.txt  photo_112.txt  photo_113.txt  photo_114.txt  photo_115.txt  photo_116.txt  photo_117.txt  photo_118.txt  photo_119.txt  photo_12.txt  photo_120.txt  photo_121.txt  photo_122.txt  photo_123.txt  photo_124.txt  photo_125.txt  photo_126.txt  photo_127.txt  photo_128.txt  photo_129.txt  photo_13.txt  photo_130.txt  photo_131.txt  photo_132.txt  photo_133.txt  photo_134.txt  (+256 more)
final_project/: main_QRcode_(clinet).py  main_QRcode_(clinet)_1.py  main_QRcode_(clinet)_2.py  main_QRcode_(clinet)_3.py  ros_robotarm_pub.py  side_project2_main.py  web.py
ros2/: arduino-arduinoide.desktop  testbot.urdf
ros2/launch_ws/install/ros_dd/share/ros_dd/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/launch_ws/install/ros_dd/share/ros_dd/launch/: ros_dd_launch.py  rosdd_launch.py
ros2/launch_ws/install/ros_dd/share/ros_dd/urdf/: ros_dd.urdf
test/: test.py
(+774 files in other folders)
