<?xml version="1.0"?>
<package format="2">
  <name>oioi</name>
  <version>0.0.0</version>
  <description>The oioi package</description>

  <maintainer email="whtkddus159@naver.com">Jo Sang Yeon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>

